cluster/apps/firefly/deployment.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: firefly
  namespace: spuxx-dev
  labels:
    app: firefly
spec:
  replicas: 1
  selector:
    matchLabels:
      app: firefly
  template:
    metadata:
      labels:
        app: firefly
    spec:
      containers:
        - name: firefly
          image: fireflyiii/core:latest
          ports:
            - containerPort: 8080
          securityContext:
            runAsUser: 9004
          volumeMounts:
            - name: uploads
              mountPath: /var/www/html/storage/upload
      volumes:
        - name: uploads
          hostPath:
            path: /home/firefly/uploads
