cluster/apps/firefly/service.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: firefly
  namespace: spuxx-dev
spec:
  selector:
    app: firefly
  ports:
    - protocol: TCP
      port: 8080
      targetPort: 8080
